Object merges